--- a/md/JAVASCRIPT/缓存.md
+++ b/md/JAVASCRIPT/缓存.md
@@ -1,14 +1,13 @@
-## 缓存作用
+## 1. 缓存作用
 * 减少了冗余的`数据传输`，节省了网费。
 * 减少了服务器的负担， 大大提高了网站的`性能`
 * 加快了客户端加载网页的`速度`
 
-## 请求流程
-<img src="http://7xjf2l.com2.z0.glb.qiniucdn.com/cachestart.png" class="img-responsive">
-<img src="http://7xjf2l.com2.z0.glb.qiniucdn.com/cachecontrol.png" class="img-responsive"> 
+## 2. 请求流程
+<img src="http://7xjf2l.com1.z0.glb.clouddn.com/cache.png" class="img-responsive">
 
 
-## 通过最后修改时间来判断缓存是否可用
+## 3. 通过最后修改时间来判断缓存是否可用
 1. Last-Modified：响应时告诉客户端此资源的`最后修改时间`
 2. `If-Modified-Since`：当资源过期时（使用Cache-Control标识的max-age），发现资源具有*Last-Modified*声明，则再次向服务器请求时带上头*If-Modified-Since*。
 3. 服务器收到请求后发现有头*If-Modified-Since*则与被请求资源的最后修改时间进行比对。若最后修改时间较新，说明资源又被改动过，则`响应最新的资源`内容并返回200状态码；
@@ -16,14 +15,15 @@
 
 ```javascript
 var matchHandle =  function(filename,req,res){
-    var lastModified  = new Date(req.headers['if-modified-since']);//最后修改时间
+   //最后修改时间
+    var ifModifiedSince  = new Date(req.headers['if-modified-since']);
     fs.stat(filename,function(err,stat){
-        //向下取整
-        if(stat.mtime.getTime()-lastModified.getTime()<=1000){
+        ////上次修改时间, 只发header
+        if(ifModifiedSince == stat.mtime.toUTCString()){
             res.statusCode = 304;
             res.end('');
-        }else{
-            res.setHeader('Last-Modified',stat.mtime.toGMTString());//上次修改时间, 只发header
+        }else{//如果时间不等则返回最新内容和最后修改时间
+            res.setHeader('Last-Modified',stat.mtime.toGMTString());
             res.writeHead(200,'OK');
             fs.createReadStream(filename).pipe(res);
         }
@@ -31,14 +31,13 @@ var matchHandle =  function(filename,req,res){
 }
 ```
 
-
-## 最后修改时间存在问题
+## 4. 最后修改时间存在问题
 1. 某些服务器不能精确得到文件的`最后修改时间`， 这样就无法通过最后修改时间来判断文件是否更新了。
 2. 某些文件的修改非常频繁，在秒以下的时间内进行修改. Last-Modified只能`精确到秒`。
 3. 一些文件的最后修改时间改变了，但是`内容并未改变`。 我们不希望客户端认为这个文件修改了。
 4. 如果同样的一个文件位于多个`CDN`服务器上的时候内容虽然一样，修改时间不一样。
 
-## ETag
+## 5. ETag
 ETag是实体标签的缩写，根据实体内容生成的一段`hash`字符串,可以标识资源的状态。当资源发生改变时，ETag也随之发生变化。
 ETag是Web服务端产生的，然后发给浏览器客户端。
 1. 客户端想判断缓存是否可用可以先获取缓存中文档的*ETag*，然后通过*If-None-Match*发送请求给Web服务器询问此缓存是否可用。
@@ -62,7 +61,7 @@ var eTagHandle = function(filename,req,res){
 }
 ```
 
-## 如何干脆不发请求
+## 6. 如何干脆不发请求
 浏览器会将文件缓存到Cache目录，第二次请求时浏览器会先检查Cache目录下是否含有该文件，如果有，并且还没到**Expires**设置的时间，即文件还没有过期，那么此时浏览器将直接从**Cache**目录中读取文件，而不再发送请求
 * **Expires**是服务器响应消息头字段，在响应*http*请求时告诉浏览器在过期时间前浏览器可以直接从浏览器缓存取数据，而无需再次请求
 * **Cache-Control**与**Expires**的作用一致，都是指明当前资源的有效期，控制浏览器是否直接从浏览器缓存取数据还是重新发请求到服务器取数据,如果同时设置的话，其优先级高于**Expires**
