--- a/md/node课程/内网使用.md
+++ b/md/node课程/内网使用.md
@@ -1,29 +1,30 @@
-## 内网IP地址
-172.18.0.199
+## 1. 内网IP地址
 
-### 通过资源管理器访问
-ftp://172.18.0.199/
+[172.18.0.199](172.18.0.199)
 
+### 1.1 通过资源管理器访问
 
-### 通过window客户端访问
+[ftp://172.18.0.199/](ftp://172.18.0.199/)
+
+### 1.2 通过window客户端访问
 https://filezilla-project.org/download.php?type=client
 
-### 通过 mac 客户端访问
+### 1.3 通过 mac 客户端访问
 https://filezilla-project.org/download.php?type=client
 
 
-## 通过内网下载npm包
-### 暂时指定代理
+## 2. 通过内网下载npm包
+### 2.1 暂时指定代理
 ```
 npm install mongoose --registry http://172.18.0.199
 ```
 
-### 永久指定代理
+### 2.2 永久指定代理
 ```
 npm config set registry "http://172.18.0.199"
 ```
 
-### 使用nrm动态切换代理
+### 2.3 使用nrm动态切换代理
 ```
 npm install nrm -g
 nrm add zhufeng http://172.18.0.199
